--- a/graphql-server/src/main/resources/static/index.html
+++ b/graphql-server/src/main/resources/static/index.html
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Trivial GraphQL service</title>
 </head>
 
 <body>
-<h1>Trivial GraphQL service</h1>
+<h1>Trivial GraphQL "clock" service</h1>
 <h2>Purpose</h2>
 <p>The purpose of this service is to have a trivial service that can be used to experiment with doing various GraphQL operations.</p>
 
@@ -14,11 +15,37 @@
 
 <h2>Query</h2>
 <p>Example:</p>
-<code>query { now }</code>
+<pre>
+query {
+    now {
+        year
+        month
+        day
+        hour
+        minute
+        second
+        millisecond
+        iso
+    }
+}
+</pre>
 
 <h2>Subscriptions</h2>
 <p>Example:</p>
-<code>subscription { now }</code>
+<pre>
+subscription {
+    now {
+        year
+        month
+        day
+        hour
+        minute
+        second
+        millisecond
+        iso
+    }
+}
+</pre>
 
 </body>
 </html>
