Add measurement test

--- a/graphql-server/src/main/resources/static/index.html
+++ b/graphql-server/src/main/resources/static/index.html
@@ -17,7 +17,7 @@
 <p>Example:</p>
 <pre>
 query {
-    now {
+    time {
         year
         month
         day
@@ -34,7 +34,7 @@ query {
 <p>Example:</p>
 <pre>
 subscription {
-    now {
+    time {
         year
         month
         day
